<resources>

    <string name="app_name">SimpleDo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">SimpleDo</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_about">About</string>
    <string name="btn_add">Add</string>
    <string name="btn_del">Delete</string>
    <string name="author_names">by: Isaac, Jianxuan &amp; Whisper</string>
    <string name="app_about">As its name shows, SimpleDo is a simple and easy to use to-do app.</string>
    <string name="feedback_link">Homepage\nhttp://gujiaxi.github.com/SimpleDo\n\n\nFeedback\nhttp://twitter.com/isaac_koo</string>
    <string name="title_activity_task">Add Task</string>
    <string name="title_activity_add">Add Task</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="add_task_hint">Write your task here.</string>

</resources>